--- a/src/pages/home/index.inline.html
+++ b/src/pages/home/index.inline.html
@@ -1,15 +1,15 @@
 <h1 class="hero-title">WebGPU Explorer</h1>
 <h2 class="hero-subtitle">Choose project to explore.</h2>
-<section class="projects-list">
+<section class="panels-list">
   <project-panel
-    class="project"
+    class="panel"
     icon="background"
     project-slug="project-1"
     title="Setup"
     text="Base for WebGPU renderings."
   ></project-panel>
   <project-panel
-    class="project"
+    class="panel"
     icon="triangle"
     project-slug="project-2"
     title="Triangle"
