--- a/src/pages/project/index.inline.html
+++ b/src/pages/project/index.inline.html
@@ -1,10 +1,59 @@
+<style>
+  .project-layout {
+    display: grid;
+    column-gap: 10px;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    height: 100%;
+    padding: 30px;
+  }
+  .view {
+    height: 100%;
+  }
+
+  code-block {
+    min-height: 0;
+  }
+</style>
+
 <div class="project-layout">
 <h1>PROJECT</h1>
 
 <code-block class="language-javascript line-numbers" data-line="2">
-  <pre>
-  const name = "Chris Coyier";
-  console.log(name);
-  </pre>
+import getContext from "utils/gpu/getContext"
+import getDevice from "utils/gpu/getDevice"
+import setCanvasSizeObserver from "utils/gpu/setCanvasSizeObserver"
+
+export default async function init() {
+  const device = await getDevice()
+  const {canvas, context} = getContext(device)
+
+  setCanvasSizeObserver(canvas, device, render)
+
+  function render() {
+    const encoder = device.createCommandEncoder()
+    const canvasTexture = context.getCurrentTexture()
+    const renderPassDescriptor = {
+      // describe which textures we want to raw to and how use them
+      label: "our render to canvas renderPass",
+      colorAttachments: [
+        {
+          view: canvasTexture.createView(),
+          clearValue: [0, 0, 0, 1],
+          loadOp: "clear", // before rendering clear the texture to value "clear". Other option is "load" to load existing content of the texture into GPU so we can draw over it
+          storeOp: "store", // to store the result of what we draw, other option is "discard"
+        } as const,
+      ],
+    }
+    const pass = encoder.beginRenderPass(renderPassDescriptor)
+
+    // do stuff
+
+    pass.end()
+    const commandBuffer = encoder.finish()
+    device.queue.submit([commandBuffer])
+  }
+}
+
+init()
 </code-block>
 </div>
