add highlight to code editor

--- a/src/pages/projectSteps/index.inline.html
+++ b/src/pages/projectSteps/index.inline.html
@@ -18,7 +18,7 @@
 <div class="project-layout">
 <h1>PROJECT</h1>
 
-<code-block class="language-javascript line-numbers" data-line="2">
+<code-block code-lang="language-javascript" highlight-lines="5-10">
 import getContext from "utils/gpu/getContext"
 import getDevice from "utils/gpu/getDevice"
 import setCanvasSizeObserver from "utils/gpu/setCanvasSizeObserver"
