switching again from shadow dom to custom elements

--- a/src/pages/home/index.inline.html
+++ b/src/pages/home/index.inline.html
@@ -1,18 +1,39 @@
 <h1 class="hero-title">WebGPU Explorer</h1>
-<h2 class="hero-subtitle">Choose project to explore.</h2>
+<h2 class="hero-subtitle">Choose project to explore</h2>
 <section class="panels-list">
   <project-panel
     class="panel"
     icon="background"
     project-slug="project-1"
-    title="Setup"
+    headline="Setup, Set, Go!"
     text="Base for WebGPU renderings."
   ></project-panel>
   <project-panel
     class="panel"
     icon="triangle"
     project-slug="project-2"
-    title="Triangle"
+    headline="Triangle"
     text="The fundamental element of modern rendering - triangle."
   ></project-panel>
+  <project-panel
+  class="panel"
+  icon="background"
+  project-slug="project-1"
+  headline="Setup, Set, Go!"
+  text="Base for WebGPU renderings."
+></project-panel>
+<project-panel
+  class="panel"
+  icon="triangle"
+  project-slug="project-2"
+  headline="Triangle"
+  text="The fundamental element of modern rendering - triangle."
+></project-panel>
+<project-panel
+  class="panel"
+  icon="triangle"
+  project-slug="project-2"
+  headline="Triangle"
+  text="The fundamental element of modern rendering - triangle."
+></project-panel>
 </section>
