--- a/src/content/setup/steps/0/index.inline.html
+++ b/src/content/setup/steps/0/index.inline.html
@@ -1,4 +1,6 @@
-<p>Some etx abotu how amaxing is hte firsr step!!<strong>YEAH!</strong>the end of setence. period.</p>
-<br>
-<p>Descriptoon of lines 5-7</p>
-<p>Some other text</p>
+<p>Before starting the coding part, let's make sure we are on the same page with environment.</p>
+
+<h2>Optinaly you can download the git project from <a target="_blank" href="https://github.com/mateuszJS/webgpu-explorer">this github repo</a> and follow all these steps on your local machine.</h2>
+<ul>
+  <li>Node.js - </li>
+</ul>
