measure output, add content

--- a/src/content/setup/steps/1/index.inline.html
+++ b/src/content/setup/steps/1/index.inline.html
@@ -1,7 +1,10 @@
-<p>Some etx abotu how amaxing is hte second step!!<strong>YEAH!</strong>the end of setence. period.</p>
-<br>
-<p>Descriptoon of lines 7-16</p>
-<p>Some other text</p>
-<p>Some other text</p>
-<p>Descriptoon of lines 18-22</p>
-<p>And that's it!</p>
+<h3>Architecture Overview</h3>
+<p>What we need to make a basic setup for WebGPU is:</p>
+<ul>
+  <li>Adapter</li>
+  <li>Device</li>
+  <li>Canvas</li>
+  <li>GPU Command Encoder</li>
+</ul>
+
+<p>As you can see on the right</p>
