--- a/src/content/setup/steps/0/index.inline.html
+++ b/src/content/setup/steps/0/index.inline.html
@@ -1,6 +1,22 @@
-<p>Before starting the coding part, let's make sure we are on the same page with environment.</p>
+<h3>Pre-work</h3>
 
-<h2>Optinaly you can download the git project from <a target="_blank" href="https://github.com/mateuszJS/webgpu-explorer">this github repo</a> and follow all these steps on your local machine.</h2>
+<p>Feel free to skip to the next step if you are not planning to run the project on your local environment.</p>
+
+<p>Before starting the coding part let's make sure we are on the same page with environment.</p>
+
+<p>To fetch the project please head to <a target="_blank" href="https://github.com/mateuszJS/webgpu-explorer">github repo</a></p>
+
+<h4>Tools required to run the project:</h4>
 <ul>
-  <li>Node.js - </li>
+  <li>
+    <a target="_blank" href="https://nodejs.org/">Node.js</a> - version 18.18.0 or newer</li>
 </ul>
+
+<h4>Installation</h4>
+<p>Run `npm install`</p>
+
+<h4>Running the project</h4>
+<p>Run `npm run start`</p>
+
+<p>And now uou are set and ready to go!</p>
+<p>Go to the next step to dive into the project.</p>
