--- a/src/content/setup/steps/2/index.inline.html
+++ b/src/content/setup/steps/2/index.inline.html
@@ -1,3 +1,3 @@
-<p>Some etx abotu how amaxing is hte third step!!<strong>YEAH!</strong>the end of setence. period.</p>
-<br>
-<p>And that's it!</p>
+<p>The first thing we need to obtain is the Device</p>
+
+<p>In WebGPU world device is isolation represetation of GPU. Isolated from other programs(Adapters isolation) as weel as other browser tabs.</p>
